Add Java 17 to GHA setup (#4659)